# tencentcloud-sdk-rust

./: Cargo.toml  LICENSE-MIT  README.md
.github/: FUNDING.yml  dependabot.yml 
.github/workflows/: build.yml  format.yml  qcos.yml  rust-clippy.yml
crates/core/: Cargo.toml
crates/core/src/: client.rs  encryption.rs  lib.rs
crates/cos/: Cargo.toml  README.md 
crates/cos/src/: acl.rs  bucket.rs  client.rs  lib.rs  objects.rs  request.rs  service.rs  signer.rs
crates/ddns/: Cargo.toml  README.md
crates/ddns/src/: ddns.rs  ip_monitor.rs  lib.rs
crates/sms/: Cargo.toml  README.md
crates/sms/src/: client.rs  lib.rs
examples/cos/: Cargo.toml
examples/sms/: Cargo.toml
examples/sms/src/: main.rs
