[workspace]
members = [
    "crates/*",
    "examples/*",
]
resolver = "2"

[profile.release]
opt-level = 3

[workspace.package]
version = "0.0.1"
authors = ["https://github.com/houseme"]
edition = "2021"
rust-version = "1.63"
license = "MIT OR Apache-2.0"
description = "Tencent Cloud SKD implement in Rust."
homepage = "https://houseme.github.io/tencentcloud-sdk-rust"
repository = "https://github.com/houseme/tencentcloud-sdk-rust.git"
documentation = "https://docs.rs/tencentcloud-sdk-rust/"
readme = "./README.md"
keywords = ["tencentcloud", "tencent", "cloud", "cos", "sms"]
categories = ["config", "asynchronous", "development-tools"]

[workspace.dependencies]
tencentcloud-sdk-rs-core = { version = "0.0.1", path = "crates/core", default-features = false }
tencentcloud-sdk-rs-cos = { version = "0.0.1", path = "crates/cos", default-features = false }
tencentcloud-sdk-rs-sms = { version = "0.0.1", path = "crates/sms", default-features = false }

clap = { version = "4.0.32", features = ["derive"] }
crossbeam-channel = "0.5.15"
toml = "0.5.11"
daemonize = "0.4.1"
base64 = "0.21"
bytes = "1"
bcrypt = "0.15.1"
encoding_rs = "0.8"
form_urlencoded = "1"
headers = "0.3"
http = "0.2"
hyper = "1.6.0"
hyper-timeout = "0.4"
hmac = "0.12"
hex = "0.4"
crypto-hash = "0.3"
sha2 = "0.10.8"
reqwest = { version = "0.12.15", features = ["json", "charset", "http2", "macos-system-configuration", "rustls-tls", "blocking", "stream"], default-features = false }
chrono = "0.4.40"
chrono-tz = { version = "0.7", default-features = false }
opentelemetry-http = { version = "0.29", default-features = false }
opentelemetry-semantic-conventions = { version = "0.29", default-features = false }
opentelemetry-prometheus = { version = "0.29", default-features = false }
opentelemetry = { version = "0.29", default-features = false }

quinn = { version = "0.11.7", default-features = false }
quote = "1"
rand = "0.8"
rcgen = "0.11"
regex = "1"
ring = "0.17.12"
rust_decimal = "1"
rustls = "0.23.26"
rustls-pemfile = "1"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-xml-rs = "0.6"
serde_urlencoded = "0.7"
serde_yaml = "0.9"
sha256 = "1.6.0"

tokio = { version = "1.44.2", features = ["full"] }
tokio-native-tls = "0.3"
tokio-rustls = "0.24.1"
tokio-openssl = "0.6"
tokio-stream = { version = "0.1", default-features = false }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.20.1", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2.5"
url = "2"
x509-parser = "0.15.1"

# Compress
brotli = { version = "3.5", default-features = false }
flate2 = { version = "1.0", default-features = false }
zstd = { version = "0.13", default-features = false }

urlencoding = "2.1.3"
sha1 = "0.10.6"
mime = "0.3.17"
quick-xml = { version = "0.23", features = ["serialize"] }
async-trait = "0.1.88"
