[package]
name = "tencentcloud-sdk-rs-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Tencent Cloud SDK Implementation(base API 3.0) in Rust. Support Tencent Cloud API request,Sign"
keywords = ["tencentcloud", "skd", "DDNS", "tencent-cloud"]
categories = ["authentication", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sha256 = "1.6.0"
tokio = "1.38.2"
