[package]
name = "tencentcloud-sdk-rs-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Tencent Cloud SDK Implementation(base API 3.0) in Rust. Support Tencent Cloud API request,Sign"
keywords = ["tencentcloud", "skd", "DDNS", "tencent-cloud"]
categories = ["authentication", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true, features = ["serde"] }
hex = { workspace = true, features = ["serde"] }
hmac = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha256 = { workspace = true }
tokio = { workspace = true }
