[package]
name = "tencentcloud-sdk-rs-cos"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords = ["cos", "tengxunyun", "tencentcloud"]
description = "provide basic interface encapsulation of Tencent Cloud Object Storage (cos)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
ring = "0.16.20"
urlencoding = "2.1.0"
sha1 = "0.10.1"
mime = "0.3.16"
bytes = "1.1.0"
quick-xml = { workspace = true, features = ["serialize"] }
async-trait = "0.1.56"
tokio = "1.2.0"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }