[package]
name = "tencentcloud-sdk-rs-cos"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords = ["cos", "tengxunyun", "tencentcloud"]
description = "provide basic interface encapsulation of Tencent Cloud Object Storage (cos)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
ring = { workspace = true }
urlencoding = { workspace = true }
sha1 = { workspace = true }
mime = { workspace = true }
bytes = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
