[package]
name = "tencentcloud-sdk-rs-ddns"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tencentcloud-sdk-rs-core = { path = "../core" }
crossbeam-channel = "0.5.15"
reqwest = { version = "0.11.27", features = ["json"] }
tokio = { version = "1.38.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.0.32", features = ["derive"] }
toml = "0.5.11"
daemonize = "0.4.1"
