[package]
name = "tencentcloud-sdk-rs-ddns"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tencentcloud-sdk-rs-core = { workspace = true }
crossbeam-channel = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
daemonize = { workspace = true }
